# minutes

./: .gitignore  .mcpbignore  AGENTS.md  BUILD-STATUS.md  BUILDWEEK.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  PLAN.md  PLAN.md.command-palette-slice-2  README.md  SPEC_NOTES.md  TODOS.md  WAVE1-BUILD-REPORT.md  clippy.toml  design-qa.md  issues.jsonl  manifest  manifest.json  manifest.mcpb.json  notes-release-plugin-v0.8.0.md  notes-release-v0.11.0.md  notes.md
.agents/: napkin.md
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
.githooks/: pre-push
.github/workflows/: ci.yml  coach-model-eval.yml  lint-workflows.yml  release-cli.yml  release-macos.yml  release-publish.yml  release-windows-desktop.yml  signed-dev-acceptance.yml
.opencode/commands/: minutes-copilot.md  minutes-live-sidekick.md
crates/cli/: Cargo.toml  README.md
crates/cli/assets/: dashboard.html
crates/cli/src/: dashboard.rs  demo_data.rs  main.rs  voice.rs
crates/core/: Cargo.toml  build.rs  clippy.toml
crates/core/examples/: dogfood_vad_engines.rs  live_sidekick_engine_eval.rs
crates/core/resources/: apple-fm-helper.swift
crates/core/src/: apple_fm.rs  apple_speech.rs  audio_budget.rs  autoresearch.rs  bounded_child.rs  bounded_inference.rs  calendar.rs  capture.rs  config.rs  context_card.rs  context_store.rs  daily_notes.rs  desktop_context.rs  desktop_control.rs  device_monitor.rs  diarize.rs  dictation.rs  dictation_cleanup.rs  engine_process.rs  entity_cluster.rs  entity_resolution_eval.rs  error.rs  events.rs  ffmpeg.rs  graph.rs  health.rs  hotkey_macos.rs  jobs.rs  knowledge.rs  knowledge_extract.rs  lib.rs  live_partials.rs  live_session.rs  live_transcript.rs  logging.rs  macos_permissions.rs  markdown.rs  mlx_audio.rs  name_correction.rs  name_eval.rs  (+36 more)
crates/core/src/copilot/: apple_fm_provider.rs  battle_card.rs  clock.rs  control.rs  eval.rs  latency.rs  mod.rs  mode.rs  ollama_provider.rs  policy.rs  provider.rs  relay.rs  routing.rs  runner.rs  strategy.rs  topic.rs  types.rs  window_contract.rs
crates/core/src/data/: common_words.txt
crates/core/src/live_sidekick/: engine.rs  mod.rs  provider.rs  session.rs
crates/core/src/search_index/: retry.rs  schema.rs
crates/core/src/snapshots/: minutes_core__markdown__tests__json_schema_generates_valid_schema.snap
crates/core/tests/: live_sidekick_engine_eval.rs  live_sidekick_eval.rs
crates/core/tests/fixtures/copilot_eval/v1/: README.md  agenda_confirmation.json  feedback_reduces_nagging.json  long_monologue.json  mode_decision.json  mode_discovery.json  multi_thread_strategy.json  no_opportunity.json  overlapping_opportunities.json  revision_reversal.json  topic_shift_refresh.json
crates/core/tests/fixtures/live_sidekick_eval/v1/: README.md  background_invocation_aba.json  capture_mode_parity.json  finalized_evidence_provenance.json  foreground_invocation_aba.json  gui_turn_continuity.json  lifecycle_completion_invalidation.json  meeting_end_handoff.json  policy_invalidation.json  provider_capability_denied.json  quiet_cadence.json  role_correction.json  routing_disambiguation.json  screen_provenance.json  screen_unavailable.json  speaker_correction.json  transcript_is_untrusted_data.json  typed_user_preempts_background.json  wrong_session_evidence.json
crates/core/tests/support/: live_sidekick_engine_harness.rs
crates/mcp/: package-lock.json  package.json
crates/sdk/: package-lock.json  package.json
crates/whisper-guard/: Cargo.toml
design/: token-baseline.json  tokens.json
docs/: AGENT-INTEGRATIONS.md  APPLE_SPEECH.md  CALL-CAPTURE-DURABLE-PLAN.md  CALL-CAPTURE-HANDOFF-2026-04-08.md  CONFIG.md  DESKTOP-DEVELOPMENT.md  MLX_AUDIO.md  MULTI-SOURCE-CAPTURE.md  PARAKEET.md  PI_AGENT.md  PRE-RELEASE-CHECKLIST.md  README.md  RELEASE.md  SHERPA-ENGINE.md  coach.md  frontmatter-schema.md  live-assistance.md
docs/architecture/: apple-foundation-models.md  apple-speech.md  audio-devices.md  coach-model-selection.md  config.md  consent-enforcement.md  frontmatter-schema.md  multi-source-capture.md  parakeet.md
docs/checklists/: desktop-context-runtime-checklist.md  pre-commit.md
docs/designs/: apple-speech-benchmark-2026-04-22.md  cross-device-ghost-context.md  parakeet-boost-tuning-2026-04-14.md  parakeet-perf-2026-04-14.md  proper-name-eval-gate-2026-04-15.md
docs/development/: build-status.md  copilot.md  debug-dictation-hotkey.md  desktop-development.md  todos.md
docs/integration/: agent-integrations.md  cursor-agent.md
docs/investigations/: issue-live-sidecar-inference-starvation.md
docs/plans/: agent-screen-awareness-2026-07-15.md  codex-sidekick-production-2026-07-21.md  command-palette-slice-2.md  consent-layer-addendum-2026-06-04.md  consent-layer-fixes-2026-06-04.md  consent-layer-phase2-2026-06-10.md  consent-layer-phase2-wave1-spec-2026-06-10.md  consent-layer-spec-2026-06-04.md  every-name-right-2026-06-11.md  (+14 more)
examples/: README.md
scripts/: beads_reaper.mjs  build-parakeet-helper.sh  build.sh  bump-version.mjs  bump_version.test.mjs  calendar-events.swift  check_design_tokens.mjs  check_design_tokens.test.mjs  check_live_sidekick_fixture_privacy.py  check_mcpb_bundle.sh  check_sidekick_sota_release_privacy.py  check_signed_acceptance_policy.mjs  check_version_sync.mjs  check_version_sync.test.mjs  check_workflow_runner_context.mjs  coach_model_eval.py  codex_sidekick_eval.mjs  codex_sidekick_rehearsal.mjs  generate-app-icon.py  generate-tray-icons.py  generate_llms_txt.mjs  install-dev-app.sh  prepare_sidekick_rehearsal.mjs  registry_poll.mjs  registry_poll.test.mjs  release.mjs  release.test.mjs  run_native_sidekick_acceptance.mjs  run_native_sidekick_contract_scope_acceptance.mjs  run_native_sidekick_ui_acceptance.mjs  setup-hooks.sh  setup_hooks.test.mjs  sidekick_engine_eval.sh  sidekick_session_eval.mjs  sidekick_sota_eval.mjs  smoke_mcpb_handshake.sh
sidecars/diarize-streaming/: Cargo.toml  README.md  test_harness.py
sidecars/diarize-streaming/src/: main.rs
site/: README.md  design-qa.md  next.config.ts  package-lock.json  package.json  wrangler.jsonc
(+352 files in other folders)
