[workspace]
members = ["crates/core", "crates/cli", "crates/reader", "crates/whisper-guard", "tauri/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.9.4"
edition = "2021"
license = "MIT"
authors = ["Mat Silverstein"]
description = "Conversation memory for AI assistants"
repository = "https://github.com/silverstein/minutes"
homepage = "https://useminutes.app"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Audio
cpal = { git = "https://github.com/RustAudio/cpal.git", rev = "63ea9fffbd3b15af0180f0800a61a3c4fec9b88a", features = ["pipewire"] }
hound = "3.5"

# Transcription
whisper-rs = "0.16"

# File watching
notify = "7"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Filesystem
dirs = "6"
walkdir = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Signal handling
ctrlc = "3"

# HTTP client (for LLM API calls — no secrets in process args)
ureq = { version = "3", features = ["json"] }

# File locking (atomic PID file operations)
fs2 = "0.4"

# JSON Schema generation
schemars = { version = "1", features = ["derive", "chrono04"] }

# Audio format conversion
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "wav", "isomp4"] }

# Noise reduction (pure Rust RNNoise port)
nnnoiseless = "0.5"

# Channels (for streaming audio)
crossbeam-channel = "0.5"

# Speaker diarization (native, no Python)
pyannote-rs = "0.3"

# ONNX Runtime + ndarray (used directly for segmentation model — pyannote-rs
# has a normalisation bug so we bypass get_segments for the segmentation step)
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"

# SQLite (relationship graph index)
rusqlite = { version = "0.33", features = ["bundled"] }
