[package]
name = "minutes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for minutes — record, transcribe, and search conversation memory"

[[bin]]
name = "minutes"
path = "src/main.rs"

[dependencies]
minutes-core = { path = "../core" }
clap = { workspace = true }
ctrlc = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
hound = { workspace = true }
libc = "0.2"
dirs = { workspace = true }
