[package]
name = "minutes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for minutes — audio capture, transcription, and meeting memory"
keywords = ["meeting", "transcription", "whisper", "ai", "memory"]
categories = ["multimedia::audio", "command-line-utilities"]

[features]
default = ["whisper"]
whisper = ["dep:whisper-rs", "whisper-guard/whisper"]
parakeet = []  # subprocess-based, uses tempfile for concurrent safety
diarize = ["dep:pyannote-rs", "dep:ort", "dep:ndarray"]
# Live speaker attribution via the external minutes-diarize-sidecar process.
# Pure subprocess IPC on this side -> intentionally NO parakeet-rs/ort dep, so it
# never collides with `diarize`'s pyannote-rs (ort rc.10 / ndarray 0.16).
streaming-diarize = ["streaming"]
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
streaming = ["dep:crossbeam-channel"]
denoise = ["dep:nnnoiseless"]
# Streaming Silero VAD via ort. Implies streaming because every consumer
# (recording sidecar) needs streaming audio. ort + ndarray are already
# pulled in by `diarize`; cargo unifies them when both features are on.
vad-ort = ["streaming", "dep:ort", "dep:ndarray"]
# Opt-in SOTA transcription engine: sherpa-onnx + parakeet-tdt-0.6b-v3 (multilingual,
# no Python), in-process via sherpa-rs. Off by default; whisper.cpp stays the default.
# Validated to coexist with `diarize`/`vad-ort`'s ort (separate onnxruntime, hidden
# symbols). No parakeet/ort dep -> no rc.10/rc.12 conflict.
engine-sherpa = ["dep:sherpa-rs"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
notify = { workspace = true }
whisper-rs = { workspace = true, optional = true }
symphonia = { workspace = true }
ureq = { workspace = true }
fs2 = { workspace = true }
schemars = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
pyannote-rs = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
whisper-guard = { path = "../whisper-guard", version = "0.3.0" }
nnnoiseless = { workspace = true, optional = true }
base64 = "0.22"
rusqlite = { workspace = true }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15.0", default-features = false, features = ["at", "av", "cat", "cf", "cm", "core_audio", "macos_14_4", "ns"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSRunningApplication", "NSWorkspace", "libc"] }
objc2-av-foundation = { version = "0.3.2", default-features = false, features = ["AVCaptureDevice", "AVMediaFormat"] }
# Static sherpa-onnx on macOS so opt-in engine-sherpa builds produce apps/CLIs
# with no dangling @rpath dylib refs (the #369 packaging blocker; verified by
# real launch + transcription). `default-features = false` drops upstream `tts`.
sherpa-rs = { version = "0.6.8", default-features = false, features = ["download-binaries", "static"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.14.0"
# Dynamic on Linux: sherpa-rs-sys's `static` panics in build.rs here unless a
# global RUSTFLAGS relocation hack is set. CLI-from-source stays the Linux path.
sherpa-rs = { version = "0.6.8", default-features = false, features = ["download-binaries"], optional = true }

# Native hotkey (CGEventTap) uses raw FFI — no extra crate deps needed.
# The macOS frameworks are linked automatically via #[link(name = "...")]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
# Dynamic on Windows, as before the macOS static fix (CI builds this gate on
# all three platforms; static archives are only wired up for macOS).
sherpa-rs = { version = "0.6.8", default-features = false, features = ["download-binaries"], optional = true }

[dev-dependencies]
hound = { workspace = true }
dirs = { workspace = true }
insta = { version = "1", features = ["json"] }

[[example]]
name = "dogfood_vad_engines"
required-features = ["streaming", "whisper"]

[[test]]
name = "integration"
path = "../../tests/integration/pipeline_test.rs"
